@@ -1,6 +1,6 @@
 // ****************************************************************************
 // 
-// Copyright (C) 2005-2009  Doom9 & al
+// Copyright (C) 2005-2012 Doom9 & al
 // 
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -32,7 +32,7 @@ namespace MeGUI.core.util
     {
         public static void RegisterSingleFileDragDrop(Control c, SingleFileReceiver r)
         {
-            RegisterSingleFileDragDrop(c, r, "*.*");
+            RegisterSingleFileDragDrop(c, r, "All files|*.*");
         }
 
         public static void RegisterSingleFileDragDrop(Control c, SingleFileReceiver r, string filter)
@@ -44,22 +44,20 @@ namespace MeGUI.core.util
         {
             c.AllowDrop = true;
             c.DragEnter += delegate(object sender, DragEventArgs e)
-        {
-            e.Effect = DragDropEffects.None;
+                {
+                    e.Effect = DragDropEffects.None;
 
-            if (e.Data.GetDataPresent(DataFormats.FileDrop))
-            {
-                string[] files = (string[])e.Data.GetData(DataFormats.FileDrop, false);
-                if (files.Length == 1 && FileUtil.MatchesFilter(filter(), files[0]))
-                    e.Effect = DragDropEffects.All;
-            }
-        };
-
+                    if (e.Data.GetDataPresent(DataFormats.FileDrop))
+                    {
+                        string[] files = (string[])e.Data.GetData(DataFormats.FileDrop, false);
+                        if (files.Length == 1 && FileUtil.MatchesFilter(filter(), files[0]))
+                            e.Effect = DragDropEffects.All;
+                    }
+                };
             c.DragDrop += delegate(object sender, DragEventArgs e)
-        {
-            r(((string[])e.Data.GetData(DataFormats.FileDrop, false))[0]);
-        };
-
+                {
+                    r(((string[])e.Data.GetData(DataFormats.FileDrop, false))[0]);
+                };
         }
 
         public static void RegisterMultiFileDragDrop(Control c, MultiFileReceiver r)
@@ -76,29 +74,29 @@ namespace MeGUI.core.util
         {
             c.AllowDrop = true;
             c.DragEnter += delegate(object sender, DragEventArgs e)
-        {
-            e.Effect = DragDropEffects.None;
-
-            if (e.Data.GetDataPresent(DataFormats.FileDrop))
-            {
-                string[] files = (string[])e.Data.GetData(DataFormats.FileDrop, false);
-                if (files.Length > 0 &&
-                    Array.Exists<string>(files, delegate(string s)
                 {
-                    return FileUtil.MatchesFilter(filter(), s);
-                }))
-                    e.Effect = DragDropEffects.All;
-            }
-        };
+                    e.Effect = DragDropEffects.None;
+
+                    if (e.Data.GetDataPresent(DataFormats.FileDrop))
+                    {
+                        string[] files = (string[])e.Data.GetData(DataFormats.FileDrop, false);
+                        if (files.Length > 0 &&
+                            Array.Exists<string>(files, delegate(string s)
+                        {
+                            return FileUtil.MatchesFilter(filter(), s);
+                        }))
+                            e.Effect = DragDropEffects.All;
+                    }
+                };
 
             c.DragDrop += delegate(object sender, DragEventArgs e)
-        {
-            r(Array.FindAll<string>(((string[])e.Data.GetData(DataFormats.FileDrop, false)),
-                delegate(string s)
                 {
-                    return FileUtil.MatchesFilter(filter(), s);
-                }));
-        };
+                    r(Array.FindAll<string>(((string[])e.Data.GetData(DataFormats.FileDrop, false)),
+                        delegate(string s)
+                        {
+                            return FileUtil.MatchesFilter(filter(), s);
+                        }));
+                };
 
         }
     }
